crates/otio-capi/include/otio.h


typedef enum OtioStatus {
    OTIO_STATUS_OK = 0,
    OTIO_STATUS_NULL_POINTER = 1,
    OTIO_STATUS_INVALID_UTF8 = 2,
    OTIO_STATUS_NO_VALUE = 3,
    OTIO_STATUS_STALE_HANDLE = 4,
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    OTIO_STATUS_CORE_ERROR = 6,
    OTIO_STATUS_TIME_ERROR = 7,
    OTIO_STATUS_PARSE_ERROR = 8,
    OTIO_STATUS_UNSUPPORTED = 9,
    OTIO_STATUS_IO_ERROR = 10,
    OTIO_STATUS_PANIC = 11
} OtioStatus;
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
typedef struct OtioTimeRange {
    OtioRationalTime start_time;
    OtioRationalTime duration;
} OtioTimeRange;
typedef struct OtioTimeTransform {
    OtioRationalTime offset;
    double scale;
    double rate;
} OtioTimeTransform;
typedef enum OtioDropFrame {
    OTIO_DROP_FRAME_INFER_FROM_RATE = 0,
    OTIO_DROP_FRAME_FORCE_NO = 1,
    OTIO_DROP_FRAME_FORCE_YES = 2
} OtioDropFrame;
typedef struct OtioDocument OtioDocument;
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
typedef enum OtioNodeKind {
    OTIO_NODE_KIND_ITEM = 0,
    OTIO_NODE_KIND_CLIP = 1,
    OTIO_NODE_KIND_GAP = 2,
    OTIO_NODE_KIND_TRACK = 3,
    OTIO_NODE_KIND_STACK = 4,
    OTIO_NODE_KIND_TIMELINE = 5,
    OTIO_NODE_KIND_TRANSITION = 6,
    OTIO_NODE_KIND_MARKER = 7,
    OTIO_NODE_KIND_EFFECT = 8,
    OTIO_NODE_KIND_TIME_EFFECT = 9,
    OTIO_NODE_KIND_LINEAR_TIME_WARP = 10,
    OTIO_NODE_KIND_FREEZE_FRAME = 11,
    OTIO_NODE_KIND_EXTERNAL_REFERENCE = 12,
    OTIO_NODE_KIND_MISSING_REFERENCE = 13,
    OTIO_NODE_KIND_GENERATOR_REFERENCE = 14,
    OTIO_NODE_KIND_IMAGE_SEQUENCE_REFERENCE = 15,
    OTIO_NODE_KIND_SERIALIZABLE_COLLECTION = 16,
    OTIO_NODE_KIND_SERIALIZABLE_OBJECT = 17,
    OTIO_NODE_KIND_SERIALIZABLE_OBJECT_WITH_METADATA = 18,
    OTIO_NODE_KIND_COMPOSABLE = 19,
    OTIO_NODE_KIND_COMPOSITION = 20,
    OTIO_NODE_KIND_MEDIA_REFERENCE = 21,
    OTIO_NODE_KIND_UNKNOWN_SCHEMA = 22,
    OTIO_NODE_KIND_OTHER = 23
} OtioNodeKind;
OtioNode otio_node_none(void);
OtioStatus otio_node_to_json(
    const OtioDocument *source,
    OtioNode node,
    size_t indent,
    OtioBuffer *out_json);
OtioStatus otio_track_new(
    OtioDocument *target,
    const char *name,
    const char *kind,
    OtioNode *out_node);
OtioStatus otio_stack_new(OtioDocument *target, const char *name, OtioNode *out_node);
OtioStatus otio_timeline_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_transition_new(
    OtioDocument *target,
    const char *name,
    const char *transition_type,
    OtioNode *out_node);
OtioStatus otio_time_effect_new(
    OtioDocument *target,
    const char *name,
    const char *effect_name,
    OtioNode *out_node);
OtioStatus otio_serializable_collection_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_node_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNodeKind *out_kind);
OtioStatus otio_node_schema_name(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_name);
OtioStatus otio_node_schema_version(
    const OtioDocument *source,
    OtioNode node_handle,
    uint32_t *out_version);
OtioStatus otio_node_name(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_name);
OtioStatus otio_node_set_name(
    OtioDocument *target,
    OtioNode node_handle,
    const char *name);
OtioStatus otio_node_parent(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_parent);
OtioStatus otio_node_visible(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_visible);
OtioStatus otio_node_overlapping(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_overlapping);
OtioStatus otio_track_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_kind);
OtioStatus otio_track_set_kind(
    OtioDocument *target,
    OtioNode node_handle,
    const char *kind);
OtioStatus otio_timeline_tracks(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_tracks);
OtioStatus otio_timeline_set_tracks(
    OtioDocument *target,
    OtioNode node_handle,
    OtioNode tracks);
OtioStatus otio_timeline_global_start_time(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_time);
OtioStatus otio_timeline_set_global_start_time(
    OtioDocument *target,
    OtioNode node_handle,
    OtioRationalTime time);
OtioStatus otio_timeline_clear_global_start_time(
    OtioDocument *target,
    OtioNode node_handle);
OtioStatus otio_transition_in_offset(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_offset);
OtioStatus otio_transition_set_in_offset(
    OtioDocument *target,
    OtioNode node_handle,
    OtioRationalTime offset);
OtioStatus otio_transition_out_offset(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_offset);
OtioStatus otio_transition_set_out_offset(
    OtioDocument *target,
    OtioNode node_handle,
    OtioRationalTime offset);
OtioStatus otio_transition_type(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_type);
OtioStatus otio_transition_set_type(
    OtioDocument *target,
    OtioNode node_handle,
    const char *transition_type);
OtioStatus otio_transition_enabled(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_enabled);
OtioStatus otio_transition_set_enabled(
    OtioDocument *target,
    OtioNode node_handle,
    bool enabled);
OtioStatus otio_node_transformed_time(
    const OtioDocument *source,
    OtioRationalTime time,
    OtioNode from,
    OtioNode to,
    OtioRationalTime *out_time);
OtioStatus otio_node_transformed_time_range(
    const OtioDocument *source,
    OtioTimeRange range,
    OtioNode from,
    OtioNode to,
    OtioTimeRange *out_range);
bool otio_rational_time_is_valid(OtioRationalTime time);
OtioRationalTime otio_rational_time_rescaled_to(OtioRationalTime time, double rate);
OtioRationalTime otio_rational_time_rescaled_to_time(
    OtioRationalTime time,
    OtioRationalTime other);
double otio_rational_time_value_rescaled_to(OtioRationalTime time, double rate);
bool otio_rational_time_almost_equal(
    OtioRationalTime left,
    OtioRationalTime right,
    double delta);
bool otio_rational_time_equal(OtioRationalTime left, OtioRationalTime right);
bool otio_rational_time_strictly_equal(OtioRationalTime left, OtioRationalTime right);
int32_t otio_rational_time_compare(OtioRationalTime left, OtioRationalTime right);
OtioRationalTime otio_rational_time_add(OtioRationalTime left, OtioRationalTime right);
OtioRationalTime otio_rational_time_subtract(
    OtioRationalTime left,
    OtioRationalTime right);
OtioRationalTime otio_rational_time_negate(OtioRationalTime time);
OtioRationalTime otio_rational_time_floor(OtioRationalTime time);
OtioRationalTime otio_rational_time_ceil(OtioRationalTime time);
OtioRationalTime otio_rational_time_round(OtioRationalTime time);
OtioRationalTime otio_rational_time_duration_from_start_end_time(
    OtioRationalTime start_time,
    OtioRationalTime end_time_exclusive);
OtioRationalTime otio_rational_time_duration_from_start_end_time_inclusive(
    OtioRationalTime start_time,
    OtioRationalTime end_time_inclusive);
OtioRationalTime otio_rational_time_from_frames(double frame, double rate);
OtioRationalTime otio_rational_time_from_seconds_at_rate(double seconds, double rate);
OtioRationalTime otio_rational_time_from_seconds(double seconds);
int32_t otio_rational_time_to_frames(OtioRationalTime time);
int32_t otio_rational_time_to_frames_at_rate(OtioRationalTime time, double rate);
double otio_rational_time_to_seconds(OtioRationalTime time);
bool otio_is_smpte_timecode_rate(double rate);
double otio_nearest_smpte_timecode_rate(double rate);
bool otio_is_drop_frame_rate(double rate);
OtioStatus otio_rational_time_from_timecode(
    const char *timecode,
    double rate,
    OtioRationalTime *out_time);
OtioStatus otio_rational_time_from_time_string(
    const char *time_string,
    double rate,
    OtioRationalTime *out_time);
OtioStatus otio_rational_time_to_timecode(
    OtioRationalTime time,
    OtioBuffer *out_timecode);
OtioStatus otio_rational_time_to_timecode_at(
    OtioRationalTime time,
    double rate,
    OtioDropFrame drop_frame,
    OtioBuffer *out_timecode);
OtioStatus otio_rational_time_to_nearest_timecode_at(
    OtioRationalTime time,
    double rate,
    OtioDropFrame drop_frame,
    OtioBuffer *out_timecode);
OtioStatus otio_rational_time_to_time_string(
    OtioRationalTime time,
    OtioBuffer *out_string);
OtioTimeRange otio_time_range_from_start_end_time(
    OtioRationalTime start_time,
    OtioRationalTime end_time_exclusive);
OtioTimeRange otio_time_range_from_start_end_time_inclusive(
    OtioRationalTime start_time,
    OtioRationalTime end_time_inclusive);
bool otio_time_range_is_valid(OtioTimeRange range);
OtioRationalTime otio_time_range_end_time_exclusive(OtioTimeRange range);
OtioRationalTime otio_time_range_end_time_inclusive(OtioTimeRange range);
OtioTimeRange otio_time_range_duration_extended_by(
    OtioTimeRange range,
    OtioRationalTime by);
OtioTimeRange otio_time_range_extended_by(OtioTimeRange range, OtioTimeRange other);
OtioRationalTime otio_time_range_clamped_time(
    OtioTimeRange range,
    OtioRationalTime time);
OtioTimeRange otio_time_range_clamped_range(OtioTimeRange range, OtioTimeRange other);
bool otio_time_range_contains_time(OtioTimeRange range, OtioRationalTime time);
bool otio_time_range_contains_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
bool otio_time_range_overlaps_time(OtioTimeRange range, OtioRationalTime time);
bool otio_time_range_overlaps_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
bool otio_time_range_before_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
bool otio_time_range_before_time(
    OtioTimeRange range,
    OtioRationalTime time,
    double epsilon_s);
bool otio_time_range_meets(OtioTimeRange range, OtioTimeRange other, double epsilon_s);
bool otio_time_range_begins_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
bool otio_time_range_begins_time(
    OtioTimeRange range,
    OtioRationalTime time,
    double epsilon_s);
bool otio_time_range_finishes_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
bool otio_time_range_finishes_time(
    OtioTimeRange range,
    OtioRationalTime time,
    double epsilon_s);
bool otio_time_range_intersects(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
OtioRationalTime otio_time_transform_applied_to_time(
    OtioTimeTransform transform,
    OtioRationalTime time);
OtioTimeRange otio_time_transform_applied_to_range(
    OtioTimeTransform transform,
    OtioTimeRange range);
OtioTimeTransform otio_time_transform_applied_to_transform(
    OtioTimeTransform transform,
    OtioTimeTransform other);