sdk/zig/src/c.zig

pub extern fn otio_node_kind(source: *Document, node_handle: NodeHandle, out_kind: *NodeKind, out_error: ?*Buffer) Status;
pub extern fn otio_node_name(source: *Document, node_handle: NodeHandle, out_name: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_node_none() NodeHandle;
pub extern fn otio_node_overlapping(source: *Document, node_handle: NodeHandle, out_overlapping: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_node_parent(source: *Document, node_handle: NodeHandle, out_parent: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_node_schema_name(source: *Document, node_handle: NodeHandle, out_name: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_node_schema_version(source: *Document, node_handle: NodeHandle, out_version: *u32, out_error: ?*Buffer) Status;
pub extern fn otio_node_set_name(target: *Document, node_handle: NodeHandle, name: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_node_to_json(source: *Document, node: NodeHandle, indent: usize, out_json: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_node_transformed_time(source: *Document, time: RationalTime, from: NodeHandle, to: NodeHandle, out_time: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_node_transformed_time_range(source: *Document, range: TimeRange, from: NodeHandle, to: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_node_visible(source: *Document, node_handle: NodeHandle, out_visible: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_is_drop_frame_rate(rate: f64) bool;
pub extern fn otio_is_smpte_timecode_rate(rate: f64) bool;
pub extern fn otio_nearest_smpte_timecode_rate(rate: f64) f64;
pub extern fn otio_rational_time_add(left: RationalTime, right: RationalTime) RationalTime;
pub extern fn otio_rational_time_almost_equal(left: RationalTime, right: RationalTime, delta: f64) bool;
pub extern fn otio_rational_time_ceil(time: RationalTime) RationalTime;
pub extern fn otio_rational_time_compare(left: RationalTime, right: RationalTime) i32;
pub extern fn otio_rational_time_duration_from_start_end_time(start_time: RationalTime, end_time_exclusive: RationalTime) RationalTime;
pub extern fn otio_rational_time_duration_from_start_end_time_inclusive(start_time: RationalTime, end_time_inclusive: RationalTime) RationalTime;
pub extern fn otio_rational_time_equal(left: RationalTime, right: RationalTime) bool;
pub extern fn otio_rational_time_floor(time: RationalTime) RationalTime;
pub extern fn otio_rational_time_from_frames(frame: f64, rate: f64) RationalTime;
pub extern fn otio_rational_time_from_seconds(seconds: f64) RationalTime;
pub extern fn otio_rational_time_from_seconds_at_rate(seconds: f64, rate: f64) RationalTime;
pub extern fn otio_rational_time_from_time_string(time_string: [*:0]const u8, rate: f64, out_time: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_rational_time_from_timecode(timecode: [*:0]const u8, rate: f64, out_time: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_rational_time_is_valid(time: RationalTime) bool;
pub extern fn otio_rational_time_negate(time: RationalTime) RationalTime;
pub extern fn otio_rational_time_rescaled_to(time: RationalTime, rate: f64) RationalTime;
pub extern fn otio_rational_time_rescaled_to_time(time: RationalTime, other: RationalTime) RationalTime;
pub extern fn otio_rational_time_round(time: RationalTime) RationalTime;
pub extern fn otio_rational_time_strictly_equal(left: RationalTime, right: RationalTime) bool;
pub extern fn otio_rational_time_subtract(left: RationalTime, right: RationalTime) RationalTime;
pub extern fn otio_rational_time_to_frames(time: RationalTime) i32;
pub extern fn otio_rational_time_to_frames_at_rate(time: RationalTime, rate: f64) i32;
pub extern fn otio_rational_time_to_nearest_timecode_at(time: RationalTime, rate: f64, drop_frame: DropFrame, out_timecode: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_rational_time_to_seconds(time: RationalTime) f64;
pub extern fn otio_rational_time_to_time_string(time: RationalTime, out_string: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_rational_time_to_timecode(time: RationalTime, out_timecode: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_rational_time_to_timecode_at(time: RationalTime, rate: f64, drop_frame: DropFrame, out_timecode: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_rational_time_value_rescaled_to(time: RationalTime, rate: f64) f64;
pub extern fn otio_serializable_collection_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_stack_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_time_effect_new(target: *Document, name: ?[*:0]const u8, effect_name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_time_range_before_range(range: TimeRange, other: TimeRange, epsilon_s: f64) bool;
pub extern fn otio_time_range_before_time(range: TimeRange, time: RationalTime, epsilon_s: f64) bool;
pub extern fn otio_time_range_begins_range(range: TimeRange, other: TimeRange, epsilon_s: f64) bool;
pub extern fn otio_time_range_begins_time(range: TimeRange, time: RationalTime, epsilon_s: f64) bool;
pub extern fn otio_time_range_clamped_range(range: TimeRange, other: TimeRange) TimeRange;
pub extern fn otio_time_range_clamped_time(range: TimeRange, time: RationalTime) RationalTime;
pub extern fn otio_time_range_contains_range(range: TimeRange, other: TimeRange, epsilon_s: f64) bool;
pub extern fn otio_time_range_contains_time(range: TimeRange, time: RationalTime) bool;
pub extern fn otio_time_range_duration_extended_by(range: TimeRange, by: RationalTime) TimeRange;
pub extern fn otio_time_range_end_time_exclusive(range: TimeRange) RationalTime;
pub extern fn otio_time_range_end_time_inclusive(range: TimeRange) RationalTime;
pub extern fn otio_time_range_extended_by(range: TimeRange, other: TimeRange) TimeRange;
pub extern fn otio_time_range_finishes_range(range: TimeRange, other: TimeRange, epsilon_s: f64) bool;
pub extern fn otio_time_range_finishes_time(range: TimeRange, time: RationalTime, epsilon_s: f64) bool;
pub extern fn otio_time_range_from_start_end_time(start_time: RationalTime, end_time_exclusive: RationalTime) TimeRange;
pub extern fn otio_time_range_from_start_end_time_inclusive(start_time: RationalTime, end_time_inclusive: RationalTime) TimeRange;
pub extern fn otio_time_range_intersects(range: TimeRange, other: TimeRange, epsilon_s: f64) bool;
pub extern fn otio_time_range_is_valid(range: TimeRange) bool;
pub extern fn otio_time_range_meets(range: TimeRange, other: TimeRange, epsilon_s: f64) bool;
pub extern fn otio_time_range_overlaps_range(range: TimeRange, other: TimeRange, epsilon_s: f64) bool;
pub extern fn otio_time_range_overlaps_time(range: TimeRange, time: RationalTime) bool;
pub extern fn otio_time_transform_applied_to_range(transform: TimeTransform, range: TimeRange) TimeRange;
pub extern fn otio_time_transform_applied_to_time(transform: TimeTransform, time: RationalTime) RationalTime;
pub extern fn otio_time_transform_applied_to_transform(transform: TimeTransform, other: TimeTransform) TimeTransform;
pub extern fn otio_timeline_clear_global_start_time(target: *Document, node_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_timeline_global_start_time(source: *Document, node_handle: NodeHandle, out_time: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_timeline_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_timeline_set_global_start_time(target: *Document, node_handle: NodeHandle, time: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_timeline_set_tracks(target: *Document, node_handle: NodeHandle, tracks: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_timeline_tracks(source: *Document, node_handle: NodeHandle, out_tracks: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_track_kind(source: *Document, node_handle: NodeHandle, out_kind: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_track_new(target: *Document, name: ?[*:0]const u8, kind: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_track_set_kind(target: *Document, node_handle: NodeHandle, kind: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_transition_enabled(source: *Document, node_handle: NodeHandle, out_enabled: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_transition_in_offset(source: *Document, node_handle: NodeHandle, out_offset: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_transition_new(target: *Document, name: ?[*:0]const u8, transition_type: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_transition_out_offset(source: *Document, node_handle: NodeHandle, out_offset: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_transition_set_enabled(target: *Document, node_handle: NodeHandle, enabled: bool, out_error: ?*Buffer) Status;
pub extern fn otio_transition_set_in_offset(target: *Document, node_handle: NodeHandle, offset: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_transition_set_out_offset(target: *Document, node_handle: NodeHandle, offset: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_transition_set_type(target: *Document, node_handle: NodeHandle, transition_type: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_transition_type(source: *Document, node_handle: NodeHandle, out_type: *Buffer, out_error: ?*Buffer) Status;
